update project links

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-11 col-xl-9 col-xxl-8">
                             <!-- Project Card 1-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5" style="cursor: pointer;" onclick="window.location='http://127.0.0.1:5500/groceryStoreApp.html';">
+                            <div class="card overflow-hidden shadow rounded-4 border-0 mb-5" style="cursor: pointer;" onclick="window.location='https://daisy-portfolio-red.vercel.app/groceryStoreApp.html';">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                             <!-- Project Card 2-->
-                            <div class="card overflow-hidden shadow rounded-4 border-0" style="cursor: pointer;" onclick="window.location='http://127.0.0.1:5500/ucAlertMaps.html';">
+                            <div class="card overflow-hidden shadow rounded-4 border-0" style="cursor: pointer;" onclick="window.location='https://daisy-portfolio-red.vercel.app/ucAlertMaps.html';">
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
